# mcpcloudtools

./: .gitignore  Dockerfile  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
$HOME/MCPCloudTools_Backup/mcpcloudtools_20250406_175216/: BACKUP_INFO.md
.next/cache/: config.json
backend/: Dockerfile  README.md  pyproject.toml
backend/fastapi_app/: main.py  test.py  tool_builder.py  tool_input.py  utils.py
backend/fastapi_app/controllers/: dynamic_route_controller.py
backend/fastapi_app/models/: api_request.py
backend/fastapi_app/routes/: dynamic_routes.py
backend/fastapi_app/services/: api_service.py
backend/fastapi_app/templates/: index.html
frontend/: DOCUMENTATION.md  Dockerfile  README.md
frontend-poc/: Dockerfile  package-lock.json
frontend-poc/src/app/: page.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/docs/: vision-document.md
frontend/src/lib/: utils.ts
frontend/src/stores/: auth-store.ts  notification-store.ts  team-store.ts
src/app/: layout.tsx  page.tsx
src/app/contact/: page.tsx
src/app/early-access/: page.tsx
src/app/notifications/: page.tsx
src/app/poc/: page.tsx
src/app/settings/: page.tsx
src/components/: providers.tsx
src/components/auth/: auth-forms.tsx  requires-auth.tsx
src/components/teams/: team-settings.tsx  teams-list.tsx
src/components/ui/: sidebar.tsx
(+15 files in other folders)
