[project]
name = "mcpcloudtools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "fastapi-mcp>=0.1.4",
    "httpx>=0.28.1",
    "pydantic>=2.11.2",
    "ruff>=0.11.3",
    "curlconverter>=1.0.1",
    "mcp>=1.6.0",
]
